--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -39,6 +39,9 @@
                 android:name="com.android.settings.summary"
                 android:resource="@string/thermal_summary" />
             <meta-data
+                android:name="com.android.settings.order"
+                android:value="-260" />
+            <meta-data
                 android:name="com.android.settings.icon"
                 android:resource="@drawable/ic_thermal_settings" />
         </activity>
