munch:  Import Xiaomi Parts Implementation - DC Dimming - Sensors Service - Clear Speaker - Mi_Thermald exposed Thermal Service - TouchFeature Implementation for Thermal Profiles - Lineage FileUtils included - Sepolicy Reworked for AOSPA Trees
Import Touchfeature while we are at it

Co-authored-by: Sebastiano Barezzi <barezzisebastiano@gmail.com>
Co-authored-by: Luca Stefani <luca.stefani.ge1@gmail.com>
Co-authored-by: TheScarastic <warabhishek@gmail.com>
Co-authored-by: Pig <pig.priv@gmail.com>
Co-authored-by: Nauval Rizky <enuma.alrizky@gmail.com>
Co-authored-by: Bruno Martins <bgcngm@gmail.com>
Co-authored-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Co-authored-by: Pranav Vashi <neobuddy89@gmail.com>
Co-authored-by: lostark13 <tushar9915@gmail.com>
Co-authored-by: WSTxda <wstxda@gmail.com>
Co-authored-by: rdxzv <rdxzv.dev@gmail.com>
Co-authored-by: Ardjlon <carlosardany@gmail.com>
Co-authored-by: cristianvaz <cristianvaz81993@gmail.com>
Co-authored-by: Jyotiraditya <jyotiraditya@aospa.co>
Co-authored-by: Joey Huab <joey@evolution-x.org>
Co-authored-by: palaych <palaychm@yandex.ru>
Co-authored-by: Volodymyr Zhdanov <wight554@gmail.com>
Co-authored-by: AshutoshSundresh <ashutoshsundresh@gmail.com>
Co-authored-by: daniml3 <danimoral1001@gmail.com>
Co-authored-by: Arian <arian.kulmer@web.de>
Co-authored-by: AnierinB <anierin@evolution-x.org>
Co-authored-by: kubersharma001 <kubersharma001@gmail.com>
Co-authored-by: jhenrique09 <jhenrique09.mcz@hotmail.com>
Co-authored-by: nullxception <enuma.alrizky@gmail.com>
Co-authored-by: chrisw444 <wandersonrodriguesf1@gmail.com>
Co-authored-by: Magesh Babu <46259860+mage1k99@users.noreply.github.com>
Co-authored-by: PainKiller3 <ninadpatil100@gmail.com>
Change-Id: If7997a4e3b756640a4f25c7283e9983e8b27e91c

--- a/rootdir/etc/init.munch.rc
+++ b/rootdir/etc/init.munch.rc
@@ -60,7 +60,8 @@ on early-init
 on boot
     # DT2W
     chown system system /sys/touchpanel/double_tap
-
+    chmod 0660 /sys/touchpanel/double_tap
+    
     chown system system /sys/class/touch/touch_dev/palm_sensor
     chmod 0664 /sys/class/power_supply/battery/dc_thermal_levels
     chown system system /sys/class/thermal/thermal_message/sconfig
@@ -69,6 +70,14 @@ on boot
     copy  /vendor/etc/tunings.txt /mnt/vendor/persist/vpp/tunings.txt
     mkdir /mnt/vendor/persist/camera 0755 system cameraserver
     write /sys/block/sda/queue/wbt_lat_usec 75000
+
+    # Allow system to modify exposure dim layer state
+    chown system system /sys/devices/platform/soc/soc:qcom,dsi-display-primary/msm_fb_ea_enable
+    chmod 0660 /sys/devices/platform/soc/soc:qcom,dsi-display-primary/msm_fb_ea_enable
+    
+    # TouchFeature
+    chown system system /dev/xiaomi-touch
+    chmod 0660 /dev/xiaomi-touch
 
 on charger
     mkdir /mnt/vendor/persist
